Moved Core loop away from Application loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED On)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(GCRISP_VULKAN_VERSION 1.3.296.0)
+set(OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../bin/${CMAKE_BUILD_TYPE}/${CMAKE_SYSTEM_NAME}/${CMAKE_ARCHITECTURE}/")
 
 option(GCRISP_BUILD_TESTS "Build tests" ON)
 option(GCRISP_PROFILING "Enable profiler" ON)
